<resources>
    <string name="app_title" translatable="false">@string/gym_rat</string>
    <string name="app_subtitle" translatable="false">@string/personal_trainer_assistant</string>
    <string name="default_toolbar_title" translatable="true">Please Login</string>
    <string name="msgEmail_send_using" translatable="false">@string/send_email_using</string>
    <string name="msgEmail_no_client" translatable="false">@string/msg_no_email_clients</string>
    <string name="msgClientInfo_empty_goal" translatable="true">@string/client_goals</string>
    <string name="toolbar_menu_quick_help" translatable="false">@string/quick_help</string>
    <string name="toolbar_menu_sign_out" translatable="false">@string/sign_out</string>
    <string name="drawer_menu_appointments" translatable="false">@string/appointments</string>
    <string name="drawer_menu_sessions" translatable="false">@string/sessions</string>
    <string name="drawer_menu_clients" translatable="false">@string/clients</string>
    <string name="drawer_menu_exercises" translatable="false">@string/exercises</string>
    <string name="drawer_menu_settings" translatable="false">@string/settings</string>
    <string name="drawer_menu_help" translatable="false">@string/help</string>
    <string name="bottom_nav_schedule_daily" translatable="true">@string/schedule_daily</string>
    <string name="bottom_nav_schedule_weekly" translatable="true">@string/schedule_weekly</string>
    <string name="bottom_nav_menu_client_info" translatable="false">@string/info</string>
    <string name="bottom_nav_menu_client_schedule" translatable="false">@string/schedule</string>
    <string name="bottom_nav_menu_client_history" translatable="false">@string/history</string>
    <string name="bottom_nav_menu_exercises" translatable="false">@string/exercises</string>
    <string name="bottom_nav_menu_routines" translatable="false">@string/routines</string>
    <string name="bottom_nav_menu_session_routine" translatable="false">@string/routine</string>
    <string name="bottom_nav_menu_session_stats" translatable="false">@string/stats</string>
    <string name="bottom_nav_menu_session_notes" translatable="false">@string/notes</string>
    <string name="bottom_nav_menu_save" translatable="false">@string/save</string>
    <string name="bottom_nav_menu_cancel" translatable="false">@string/cancel</string>
    <string name="frag_statDetail_changePrevious" translatable="false">@string/change_previous</string>
    <string name="frag_statDetail_changeStart" translatable="false">@string/change_start</string>
    <string name="frag_statDetail_last" translatable="false">@string/last</string>
    <string name="frag_statDetail_save" translatable="false">@string/save</string>
    <string name="frag_statDetail_start" translatable="false">@string/start</string>
    <string name="frag_noteDetail_save" translatable="false">@string/save</string>
    <string name="context_menu_activate" translatable="false">@string/activate</string>
    <string name="context_menu_retire" translatable="false">@string/retire</string>
    <string name="context_menu_reschedule" translatable="false">@string/reschedule</string>
    <string name="context_menu_cancel_session" translatable="false">@string/cancel_session</string>
    <string name="emptyRecycler_addClient" translatable="false">@string/add_client</string>
    <string name="emptyRecycler_addExercise" translatable="false">@string/add_exercise</string>
    <string name="emptyRecycler_addRoutine" translatable="false">@string/add_routine</string>
    <string name="emptyRecycler_addRoutineExercise" translatable="false">@string/add_routine_exercise</string>
    <string name="emptyRecycler_noContacts" translatable="false">@string/msg_no_contacts</string>
    <string name="emptyRecycler_noSessions" translatable="false">@string/no_sessions</string>
    <string name="emptyRecycler_noNotes" translatable="false">@string/no_notes</string>
    <string name="emptyRecycler_noStats" translatable="false">@string/no_stats</string>
    <string name="recycler_tagPosition" translatable="false">tag_position</string>
    <string name="recycler_tagItem" translatable="false">tag_item</string>
    <string name="recycler_tagItem02" translatable="false">tag_item02</string>
    <string name="recycler_tagId" translatable="false">tag_id</string>
    <string name="clientInfo_client_info" translatable="false">@string/client_info</string>
    <string name="clientInfo_training_info" translatable="false">@string/training_info</string>
    <string name="clientInfo_phone" translatable="false">@string/phone</string>
    <string name="clientInfo_email" translatable="false">@string/email</string>
    <string name="exerciseCategory_arms" translatable="false">@string/arms</string>
    <string name="exerciseCategory_back" translatable="false">@string/back</string>
    <string name="exerciseCategory_cardio" translatable="false">@string/cardio</string>
    <string name="exerciseCategory_chest" translatable="false">@string/chest</string>
    <string name="exerciseCategory_core" translatable="false">@string/core</string>
    <string name="exerciseCategory_legs" translatable="false">@string/legs</string>
    <string name="exerciseCategory_shoulders" translatable="false">@string/shoulders</string>
    <string name="exerciseData_reps" translatable="false">@string/reps</string>
    <string name="exerciseData_weight" translatable="false">@string/weight</string>
    <string name="exerciseData_distance" translatable="false">@string/distance</string>
    <string name="exerciseData_time" translatable="false">@string/time</string>
    <string name="exerciseData_none" translatable="false">@string/none</string>
    <string name="routineCard_sets" translatable="false">@string/sets</string>
    <string name="dialogContacts_title" translatable="false">@string/contacts_list</string>
    <string name="dialogSchedule_client" translatable="false">@string/client</string>
    <string name="dialogSchedule_time" translatable="false">@string/session_time</string>
    <string name="dialogSchedule_routine" translatable="false">@string/routine</string>
    <string name="dialogSchedule_no_routine_selected" translatable="true">@string/msg_none_selected</string>
    <string name="dialogClientApp_date" translatable="false">@string/date</string>
    <string name="dialogClientApp_time" translatable="false">@string/time</string>
    <string name="dialogClientApp_routine" translatable="false">@string/routine</string>
    <string name="dialogClientApp_no_routine_selected" translatable="true">@string/msg_none_selected</string>
    <string name="measurement_detail_last" translatable="true">Last</string>
    <string name="measurement_detail_pre" translatable="true">Pre</string>
    <string name="measurement_detail_weight" translatable="true">Weight</string>
    <string name="measurement_detail_body_fat" translatable="true">Body Fat %</string>
    <string name="measurement_detail_bmi" translatable="true">BMI</string>
    <string name="measurement_detail_neck" translatable="true">Neck</string>
    <string name="measurement_detail_chest" translatable="true">Chest</string>
    <string name="measurement_detail_rbicep" translatable="true">Right Bicep</string>
    <string name="measurement_detail_lbicep" translatable="true">Left Bicep</string>
    <string name="measurement_detail_waist" translatable="true">Waist</string>
    <string name="measurement_detail_navel" translatable="true">At Navel</string>
    <string name="measurement_detail_hips" translatable="true">Hips</string>
    <string name="measurement_detail_rthigh" translatable="true">Right Thigh</string>
    <string name="measurement_detail_lthigh" translatable="true">Left Thigh</string>
    <string name="measurement_detail_rcalf" translatable="true">Right Calf</string>
    <string name="measurement_detail_lcalf" translatable="true">Left Calf</string>
    <string name="measurement_detail_delta_pre" translatable="true">Δ Pre</string>
    <string name="measurement_detail_delta_start" translatable="true">Δ Start</string>
    <string-array name="client_status">
        <item>@string/active</item>
        <item>@string/retired</item>
    </string-array>
    <string-array name="soap_notes">
        <item>@string/subjective</item>
        <item>@string/objective</item>
        <item>@string/assessment</item>
        <item>@string/plan</item>
    </string-array>
    <string name="back_slash" translatable="false">/</string>
    <string name="activate" translatable="true">Activate</string>
    <string name="active" translatable="true">Active</string>
    <string name="add_appointment" translatable="true">Add Appointment</string>
    <string name="add_client" translatable="true">Add Client</string>
    <string name="add_exercise" translatable="true">Add Exercise</string>
    <string name="add_routine" translatable="true">Add Routine</string>
    <string name="add_routine_exercise" translatable="true">Add Routine Exercise</string>
    <string name="add_measurement" translatable="true">Add Measurement</string>
    <string name="all" translatable="true">All</string>
    <string name="appointments" translatable="true">Appointments</string>
    <string name="arms" translatable="true">Arms</string>
    <string name="assessment" translatable="true">Assessment</string>
    <string name="back" translatable="true">Back</string>
    <string name="background_orange" translatable="true">Background Orange</string>
    <string name="background_sun" translatable="true">Background Sun</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="cancel_session" translatable="true">Cancel Session</string>
    <string name="cardio" translatable="true">Cardio</string>
    <string name="category" translatable="true">Category</string>
    <string name="change_previous" translatable="true">Change from Previous</string>
    <string name="change_start" translatable="true">Change from Start</string>
    <string name="chest" translatable="true">Chest</string>
    <string name="client" translatable="true">Client</string>
    <string name="client_goals" translatable="true">Client Goals</string>
    <string name="client_history" translatable="true">Client History</string>
    <string name="client_info" translatable="true">Client Info</string>
    <string name="client_profile" translatable="true">Client Profile</string>
    <string name="client_schedule" translatable="true">Client Schedule</string>
    <string name="clients" translatable="true">Clients</string>
    <string name="contact_info" translatable="true">Contact Info</string>
    <string name="contacts_list" translatable="true">Contacts List</string>
    <string name="core" translatable="true">Core</string>
    <string name="custom_routine" translatable="true">Custom Routine</string>
    <string name="daily" translatable="true">Daily</string>
    <string name="date" translatable="true">Date</string>
    <string name="delete" translatable="true">Delete</string>
    <string name="distance" translatable="true">Distance</string>
    <string name="edit" translatable="true">Edit</string>
    <string name="email" translatable="true">Email</string>
    <string name="exercise" translatable="true">Exercise</string>
    <string name="exercises" translatable="true">Exercises</string>
    <string name="first" translatable="true">First</string>
    <string name="help" translatable="true">Help</string>
    <string name="history" translatable="true">History</string>
    <string name="info" translatable="true">Info</string>
    <string name="goals" translatable="true">Goals</string>
    <string name="gym_rat" translatable="true">Gym Rat</string>
    <string name="phone" translatable="true">Phone</string>
    <string name="save" translatable="true">Save</string>
    <string name="sets" translatable="true">Sets</string>
    <string name="sign_out" translatable="true">Sign Out</string>
</resources>