<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_appointment_day_black_36dp"
            android:title="@string/drawer_menu_appointments" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_accessibility_black_36dp"
            android:title="@string/drawer_menu_sessions" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_person_black_36dp"
            android:title="@string/drawer_menu_clients" />

        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_fitness_center_black_36dp"
            android:title="@string/drawer_menu_exercises" />
    </group>

    <group android:id="@+id/nav_group_bottom">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_36dp"
            android:title="@string/drawer_menu_help" />

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_cancel_black_36dp"
            android:title="@string/sign_out" />

    </group>

</menu>